--- a/src/info.plist
+++ b/src/info.plist
@@ -59,10 +59,6 @@
     -- 3 - Everyone
     set discoverabilityLevel to 0
 
-    -- repeat with arg in argv -- argv is a list {}, even if there is only one argument
-    --     displayMsg(arg, missing value)
-    -- end repeat
-
     set argc to count argv
 
     if argc &gt; 1 then
@@ -72,11 +68,10 @@
     if argc is 0 then
         set discoverabilityLevel to 1
     else
-        -- the last result will be returned
         set discoverabilityLevel to first item of argv
     end if
 
-	applyDiscoverabilityLevel(discoverabilityLevel)
+    applyDiscoverabilityLevel(discoverabilityLevel)
 
     return -- otherwise it will also print the last command
 end run
@@ -91,6 +86,81 @@ on applyDiscoverabilityLevel(discoverabilityLevel)
     -- for some reason need to explicitly cast it to integer, otherwise click won't actually click
     set discoverabilityLevel to discoverabilityLevel as integer
 
+    -- check if user configured toggling off Bluetooth as well
+    set toggleOffBluetooth to (system attribute "TOGGLE_OFF_BLUETOOTH") as integer
+
+    -- first set desired AirDrop discoverability level
+    toggleAirDropViaMenuBar(discoverabilityLevel)
+
+    -- and then optionally disable Bluetooth
+    if discoverabilityLevel is 1 and toggleOffBluetooth is 1 then
+        toggleBluetoothOff()
+    end if
+end applyDiscoverabilityLevel
+
+on toggleAirDropViaMenuBar(discoverabilityLevel)
+    tell application "System Events"
+        tell process "ControlCenter"
+            try -- via Menu Bar icon first
+                -- check if user has added AirDrop to Menu Bar
+                set mbiAirDrop to a reference to first item of (get menu bar items of menu bar 1) whose description is "AirDrop"
+                if mbiAirDrop exists then
+                    -- log "[DEBUG] Found AirDrop icon on Menu Bar"
+                    click mbiAirDrop
+                else
+                    error "There is no AirDrop icon on Menu Bar, you need to add it there first"
+                end if
+
+                -- no IDs or labels, have to rely on ordinals
+                set tglAirDrop to first checkbox of group 1 of window "Control Centre"
+                if discoverabilityLevel is 1 then
+                    tell tglAirDrop
+                        if (its value as boolean) then click tglAirDrop
+                    end tell
+                else
+                    tell tglAirDrop
+                        if not (its value as boolean) then click tglAirDrop
+                    end tell
+
+                    set tglAirDropDiscoverability to checkbox discoverabilityLevel of group 1 of window "Control Centre"
+                    tell tglAirDropDiscoverability
+                        if not (its value as boolean) then click tglAirDropDiscoverability
+                    end tell
+                end if
+            on error ex -- fallback to Control Centre
+                -- log "[DEBUG] " &amp; ex
+                try
+                    -- disabled, see comments on clicking checkbox 4 below
+                    --
+                    -- set mbiControlCentre to a reference to first item of (get menu bar items of menu bar 1) whose description is "Control Centre"
+                    -- if mbiControlCentre exists then
+                    --     click mbiControlCentre
+                    -- else
+                    --     error "Couldn't find Control Centre on Menu Bar"
+                    -- end if
+                    --
+                    -- no IDs or labels, have to rely on ordinals
+                    -- checkbox 4 is the AirDrop icon item, which just toggles the state ON and OFF
+                    -- without openning options, but we want to click on the text, because then
+                    -- the options menu will appear, and that is not possible to do through Accessibility
+                    --
+                    -- TODO: when this menu becomes accessible, implement logic for setting desired state instead of the current "dumb" toggling
+                    -- click checkbox 4 of group 1 of window "Control Centre"
+                    --
+                    error "AirDrop options menu is not available through Accessibility, falling back to Finder window"
+                on error ex
+                    -- log "[DEBUG] " &amp; ex
+                    my toggleAirDropViaFinder(discoverabilityLevel)
+                    return -- otherwise it will get to pressing ESC below
+                end try
+            end try
+
+            key code 53 -- ESC
+        end tell
+    end tell
+end toggleAirDropViaMenuBar
+
+on toggleAirDropViaFinder(discoverabilityLevel)
     tell application "Finder"
         make new Finder window
         activate
@@ -98,7 +168,7 @@ on applyDiscoverabilityLevel(discoverabilityLevel)
 
     tell application "System Events" to tell process "Finder"
         keystroke "R" using {command down, shift down}
-        # check if Bluetooth is disabled
+        -- check if Bluetooth is disabled
         set bluetoothButton to a reference to (first button of splitter group 1 of window 1) -- neither of these works: whose name is "Turn On Bluetooth" / whose value of attribute "Title" is "Turn On Bluetooth"
         if bluetoothButton exists then
             -- for some reason cannot put both of these conditions into one if statement
@@ -112,61 +182,57 @@ on applyDiscoverabilityLevel(discoverabilityLevel)
                 return
             end if
         end if
-        # open the "Allow me to be discovered by" dropdown
+        -- open the "Allow me to be discovered by" dropdown
         click button 1 of splitter group 1 of splitter group 1 of window 1
-        # select the discoverability level
+        -- select the discoverability level
         click radio button discoverabilityLevel of pop over 1 of splitter group 1 of splitter group 1 of window 1
 
-        # close current Finder window, otherwise they'll spam the user eventually
+        -- close current Finder window, otherwise they'll spam the user eventually
         tell application "Finder"
             close first window
         end tell
-
-        -- check if user configured toggling off Bluetooth as well
-        set toggleOffBluetooth to (system attribute "toggle_off_bluetooth") as integer
-
-        # also disable Bluetooth
-        if discoverabilityLevel is 1 and toggleOffBluetooth is 1 then
-            tell application "System Events"
-                tell process "ControlCenter"
-                    try -- via Menu Bar icon first
-                        # check if user has added Bluetooth to Menu Bar
-                        set mbiBluetooth to a reference to first item of (get menu bar items of menu bar 1) whose description is "Bluetooth"
-                        if mbiBluetooth exists then
-                            -- log "[DEBUG] Found Bluetooth icon on Menu Bar"
-                            click mbiBluetooth
-                        else
-                            error "There is no Bluetooth icon on Menu Bar, you need to add it there first"
-                        end if
-
-                        # no IDs or labels, have to rely on ordinals
-                        set tglBluetooth to first checkbox of group 1 of window "Control Centre"
-                        tell tglBluetooth
-                            if (its value as boolean) then click tglBluetooth
-                        end tell
-                    on error -- fallback to Control Centre
-                        -- log "[DEBUG] User does not have Bluetooth icon on Menu Bar, falling back to Control Centre"
-                        set mbiControlCentre to a reference to first item of (get menu bar items of menu bar 1) whose description is "Control Centre"
-                        if mbiControlCentre exists then
-                            click mbiControlCentre
-                        else
-                            -- there is no fallback for this scenario, so the script should fail
-                            error "Couldn't find Control Centre on Menu Bar"
-                        end if
-
-                        # no IDs or labels, have to rely on ordinals
-                        set tglBluetooth to checkbox 3 of group 1 of window "Control Centre"
-                        tell tglBluetooth
-                            if (its value as boolean) then click tglBluetooth
-                        end tell
-                    end try
-
-                    key code 53 -- ESC
-                end tell
-            end tell
-        end if
     end tell
-end applyDiscoverabilityLevel
+end toggleAirDropViaFinder
+
+on toggleBluetoothOff()
+    tell application "System Events"
+        tell process "ControlCenter"
+            try -- via Menu Bar icon first
+                -- check if user has added Bluetooth to Menu Bar
+                set mbiBluetooth to a reference to first item of (get menu bar items of menu bar 1) whose description is "Bluetooth"
+                if mbiBluetooth exists then
+                    -- log "[DEBUG] Found Bluetooth icon on Menu Bar"
+                    click mbiBluetooth
+                else
+                    error "There is no Bluetooth icon on Menu Bar, you need to add it there first"
+                end if
+
+                -- no IDs or labels, have to rely on ordinals
+                set tglBluetooth to first checkbox of group 1 of window "Control Centre"
+                tell tglBluetooth
+                    if (its value as boolean) then click tglBluetooth
+                end tell
+            on error ex -- fallback to Control Centre
+                -- log "[DEBUG] " &amp; ex
+                set mbiControlCentre to a reference to first item of (get menu bar items of menu bar 1) whose description is "Control Centre"
+                if mbiControlCentre exists then
+                    click mbiControlCentre
+                else
+                    -- there is no fallback for this scenario, so the script should fail
+                    error "Couldn't find Control Centre on Menu Bar"
+                end if
+
+                -- no IDs or labels, have to rely on ordinals
+                set tglBluetooth to checkbox 3 of group 1 of window "Control Centre"
+                tell tglBluetooth
+                    if (its value as boolean) then click tglBluetooth
+                end tell
+            end try
+
+            key code 53 -- ESC
+        end tell
+    end tell
+end toggleBluetoothOff
 
 on displayMsg(msg, autoCloseTimeout)
     if autoCloseTimeout is missing value then set autoCloseTimeout to 0
@@ -253,7 +319,9 @@ Also can optionally toggle Bluetooth off, when setting `No One` discoverability 
 The workflow uses an AppleScript to click on UI controls, which means two things:
 
 1. You will see windows (*Finder, Control Centre, etc*) openning and closing, buttons/toggles being clicked/toggled, which is not a great user experience. Unfortunatelly, Apple doesn't provide an API for performing these operations in a less ugly manner;
-2. The script heavily relies on UI controls ordinals, since there are no IDs or labels, which means that it might stop working correctly in one of the next Mac OS versions. Currently tested Mac OS version is `13.5.2`.</string>
+2. The script heavily relies on UI controls ordinals, since there are no IDs or labels, which means that it might stop working correctly in one of the next Mac OS versions. Currently tested Mac OS version is `13.5.2`.
+
+You can get rid of Finder window showing up by adding AirDrop icon to Menu Bar via Control Centre Modules in System Settings.</string>
 	<key>uidata</key>
 	<dict>
 		<key>00AFFCCF-3413-4355-A183-8870CE6CE385</key>
@@ -297,13 +365,13 @@ The workflow uses an AppleScript to click on UI controls, which means two things
 			<key>type</key>
 			<string>checkbox</string>
 			<key>variable</key>
-			<string>toggle_off_bluetooth</string>
+			<string>TOGGLE_OFF_BLUETOOTH</string>
 		</dict>
 	</array>
 	<key>variablesdontexport</key>
 	<array/>
 	<key>version</key>
-	<string>0.9.1</string>
+	<string>0.9.2</string>
 	<key>webaddress</key>
 	<string>https://github.com/retifrav/alfred-airdrop-discoverability</string>
 </dict>
